--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=611956c9f898c611dbe9a99efa5162fe"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
